[gd_scene load_steps=17 format=1]

[ext_resource path="res://assets/sound_game_over.smp" type="Sample" id=1]
[ext_resource path="res://assets/sound_point.smp" type="Sample" id=2]
[ext_resource path="res://set.tres" type="TileSet" id=3]
[ext_resource path="res://ball.gd" type="Script" id=4]
[ext_resource path="res://hud.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/100Font.fnt" type="Font" id=6]
[ext_resource path="res://assets/buttons/orange_btn_normal.tex" type="Texture" id=7]
[ext_resource path="res://assets/buttons/orange_btn_pressed.tex" type="Texture" id=8]
[ext_resource path="res://assets/fonts/50Font.fnt" type="Font" id=9]
[ext_resource path="res://assets/buttons/blue_btn_normal.tex" type="Texture" id=10]
[ext_resource path="res://assets/buttons/blue_btn_pressed.tex" type="Texture" id=11]
[ext_resource path="res://assets/backgroundColor.tex" type="Texture" id=12]
[ext_resource path="res://assets/ball_particle.tex" type="Texture" id=13]

[sub_resource type="SampleLibrary" id=1]

samples/sound_game_over = { "db":0.0, "pitch":1.0, "sample":ExtResource( 1 ) }
samples/sound_point = { "db":0.0, "pitch":1.0, "sample":ExtResource( 2 ) }

[sub_resource type="Animation" id=2]

resource/name = "bg_change"
length = 80.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 10, 20, 30, 40, 50, 60, 80 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ), "values":[ Color( 0.501961, 0.772549, 0.72549, 1 ), Color( 0.585938, 0.315857, 0.315857, 1 ), Color( 0.4375, 0.398781, 0.266602, 1 ), Color( 0.275948, 0.4375, 0.266602, 1 ), Color( 0.266602, 0.353386, 0.4375, 1 ), Color( 0.348045, 0.266602, 0.4375, 1 ), Color( 0.424149, 0.266602, 0.4375, 1 ), Color( 0.501961, 0.772549, 0.72549, 1 ) ] }

[sub_resource type="Animation" id=3]

resource/name = "explode"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("particles_explosion:config/emitting")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "values":[ true, false ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/keys = { "cont":false, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ null ] }

[node name="game" type="Node2D"]

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = -1.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="TileMap" type="TileMap" parent="."]

mode = 1
tile_set = ExtResource( 3 )
cell/size = Vector2( 128, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131066, 0, -65530, 0, -65529, 0, 7, 0, 8, 0, 9, 0, 65545, 0, 65546, 0, 131082, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0 )

[node name="ball" type="Sprite" parent="."]

transform/pos = Vector2( 380.578, 500 )
transform/scale = Vector2( 0.4, 0.4 )
script/script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="ball"]

transform/pos = Vector2( 537.55, -93.3062 )
transform/scale = Vector2( 60.1224, 55.4578 )
offset = Vector2( -90, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.8, 0.8 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 7.0
drag_margin/left = 0.2
drag_margin/top = 0.0
drag_margin/right = 0.2
drag_margin/bottom = 0.0

[node name="hud" type="CanvasLayer" parent="ball"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 5 )

[node name="tap_label" type="RichTextLabel" parent="ball/hud"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
margin/left = 247.0
margin/top = 392.0
margin/right = -246.0
margin/bottom = -128.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = true
bbcode/bbcode = "TAP ON THE SCREEN TO START"
visible_characters = -1

[node name="points_label" type="Label" parent="ball/hud"]

margin/left = 295.0
margin/top = 1805.0
margin/right = 1035.0
margin/bottom = 1884.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_over" type="Control" parent="ball/hud"]

visibility/visible = false
margin/right = 40.0
margin/bottom = 40.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="game_over_label" type="Label" parent="ball/hud/game_over"]

margin/left = 183.0
margin/top = 626.0
margin/right = 897.0
margin/bottom = 717.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="newgame_btn" type="TextureButton" parent="ball/hud/game_over"]

margin/left = 284.0
margin/top = 798.0
margin/right = 796.0
margin/bottom = 930.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="ball/hud/game_over/newgame_btn"]

margin/left = 27.0
margin/top = 10.0
margin/right = 482.0
margin/bottom = 109.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 9 )
text = "NEW GAME"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="exit_btn" type="TextureButton" parent="ball/hud/game_over"]

visibility/visible = false
margin/left = 284.0
margin/top = 1030.0
margin/right = 796.0
margin/bottom = 1162.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
__meta__ = { "_editor_collapsed":true }

[node name="Label" type="Label" parent="ball/hud/game_over/exit_btn"]

margin/left = 27.0
margin/top = 10.0
margin/right = 482.0
margin/bottom = 109.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 9 )
text = "EXIT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bg" type="Sprite" parent="ball"]

transform/pos = Vector2( 528.004, 280.837 )
transform/scale = Vector2( 2.08047, 2.80907 )
z/z = -1
texture = ExtResource( 12 )
modulate = Color( 0.501961, 0.772549, 0.72549, 1 )

[node name="anim" type="AnimationPlayer" parent="ball/bg"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bg_change = SubResource( 2 )
next/bg_change = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "bg_change"

[node name="particles_explosion" type="Particles2D" parent="ball"]

config/amount = 32
config/lifetime = 0.5
config/emitting = false
config/half_extents = Vector2( 20, 20 )
config/explosiveness = 0.1
config/texture = ExtResource( 13 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 300.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="anim" type="AnimationPlayer" parent="ball"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="draw" from="ball/hud/tap_label" to="ball/hud" method="_on_tap_label_draw"]

[connection signal="hide" from="ball/hud/tap_label" to="ball/hud" method="_on_tap_label_hide"]

[connection signal="draw" from="ball/hud/game_over" to="ball/hud" method="_on_game_over_draw"]

[connection signal="hide" from="ball/hud/game_over" to="ball/hud" method="_on_game_over_hide"]

[connection signal="pressed" from="ball/hud/game_over/newgame_btn" to="ball/hud" method="_on_newgame_btn_pressed"]

[connection signal="pressed" from="ball/hud/game_over/exit_btn" to="ball/hud" method="_on_exit_btn_pressed"]


